commiting cog wheel alignment issue

--- a/hmecloud/client/src/components/Security/Login.css
+++ b/hmecloud/client/src/components/Security/Login.css
@@ -202,6 +202,7 @@ width:197px;
     .cogWheelSection {
         display:flex;
         align-items:center;
+        height:100%;
     }
     .cogWheel {
         height: 30px;
